# FinBridge_GraphRAG

./: .env.example  .gitignore  CONVENTIONS.md  README.md  docker-compose.yml  pyproject.toml
.github/: BRANCH_STRATEGY.md  pull_request_template.md  setup_branch_protection.sh
app/: main.py
app/adapters/: gemini_adapter.py  mock_data_adapter.py  neo4j_adapter.py
app/apis/: __init__.py  agent_router.py  chat_router.py  dependencies.py  health.py  stocks.py
app/apis/dtos/: __init__.py  agent_dto.py  chat_dto.py  common.py  stock.py
app/core/: config.py  database.py  exceptions.py  logging.py
app/domain/: candle.py
app/repositories/graph_db/: neo4j_repository.py
app/repositories/postgres/: __init__.py  candle_repository.py  stock_repository.py  stub_stock_repository.py
app/repositories/postgres/models/: candle.py
app/services/: agent_service.py  chat_service.py  general_llm_mock.json  imsi_langgraph_multi_agent_colab_run_v0.6_20260615.ipynb  langgraph_multi_agent_colab_run_v0.6_20260615.ipynb  neo4j_relation_mock.json  pgvector_news_mock.json  postgresql_stock_mock.json  stock_service.py
docs/: ontology_definition.md
pipeline/: exceptions.py
pipeline/collectors/: __init__.py  stock_data_collector.py
pipeline/collectors/dtos/: __init__.py  stock.py
scripts/: init_graph.py  seed_data.py
tests/: conftest.py
tests/integration/: test_api_stocks.py
tests/unit/: test_neo4j_repository.py  test_stock_data_collector.py  test_stock_service.py
